# picosignet

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.claude/workflows/: rp2350-port-review.js
.github/workflows/: ci.yml
docs/: FLASH_LAYOUT.md  PROTOCOL.md  PROVISIONING.md  THREAT_MODEL.md
host/: go.mod  go.sum
host/cmd/picosignet/: main.go
host/cmd/usbhsm/: main.go
host/internal/bridge/: bridge.go  bridge_test.go
host/internal/cli/: cli.go  cli_test.go
host/internal/device/: device.go  device_test.go
host/internal/hsmproto/: hsmproto.go  hsmproto_test.go
hsm-core/: Cargo.toml
hsm-core/src/: cert.rs  clock.rs  dispatch.rs  goduration.rs  hal.rs  keys.rs  lib.rs  lineio.rs  metrics.rs  pin.rs  proto.rs  rng.rs  selftest.rs  sshwire.rs  state.rs  storage.rs  testhal.rs  validate.rs  wrap.rs
hsm-fw/: Cargo.toml  build.rs  memory.x
hsm-fw/src/: entropy_hal.rs  flash_hal.rs  led.rs  main.rs  otp_secret.rs  security.rs  time_hal.rs  usb.rs
hsm-sim/: Cargo.toml
hsm-sim/src/: main.rs
packaging/: .SRCINFO  60-picosignet.rules  PKGBUILD  README.md  build-arch.sh  build-deb.sh  picosignet-bridge.conf  picosignet-bridge.service
packaging/debian/: changelog  control  copyright  postinst  postrm  prerm  rules
scripts/: provision_production.sh
tests/differential/: differential_test.go  go.mod
tests/golden/: verify_golden.sh
tests/hil/: run.sh
