[package]
name = "hsm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol, crypto, state machine, and storage for the usbhsm SSH-cert HSM (no_std + alloc)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hkdf.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
zeroize.workspace = true
base64.workspace = true
crc.workspace = true

[features]
default = []
# `std` enables host-only conveniences (currently nothing beyond test gating);
# the library is no_std by default and std under `cargo test`.
std = []

[dev-dependencies]
# Host-side tests run with std; no extra crates required beyond the deps above.
