[package]
name = "hsm-fw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embassy RP2350 firmware: USB CDC-ACM transport wiring hsm-core to real peripherals."

[dependencies]
hsm-core = { path = "../hsm-core" }
# RngCore for drawing the OTP secret from hsm-core's health-checked DRBG.
rand_core.workspace = true

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-alloc = "0.6"

# Embassy: async executor, RP2350 HAL, USB CDC-ACM device class. The RP2350
# boot block (IMAGE_DEF) lives in main.rs; memory.x places it after the vector
# table where the bootrom expects it.
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.3", features = ["rp235xa", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.4", default-features = false }
embassy-time = "0.4"
embassy-sync = "0.6"
embassy-futures = "0.1"
static_cell = "2"
# WS2812 status LED via embassy-rp's PIO driver (same smart-leds version).
smart-leds = "0.4"
# Direct PAC access for security peripherals embassy-rp does not wrap:
# glitch detectors and the OTP per-page SW_LOCK registers. Same version/feature
# embassy-rp itself uses, so there is exactly one PAC in the build.
rp-pac = { version = "7", features = ["rp235x"] }

panic-halt = "1"
